# BattleShip-Automation

./: .gitignore  Cargo.toml  layout.json  layout.min.json
src/: enums.rs  field.rs  layouts.rs  load.rs  main.rs
src/field/: cell.rs  index.rs  print.rs  row.rs  test.rs
