[package]
name = "battle_ship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
crossterm = "0.23"
num-integer = "0.1"
ctrlc = "3.2"
